# bourbon_textual

./: '  .gitignore  README.md  bourbon-0.2.0-py3-none-any.whl  httpcore-1.0.8-py3-none-any.whl  msgpack-1.1.0-cp313-cp313-macosx_11_0_arm64.whl  pydantic-2.11.3-py3-none-any.whl  pydantic_core-2.33.1-cp313-cp313-macosx_11_0_arm64.whl  pyproject.toml  rich-14.0.0-py3-none-any.whl  sqlalchemy-2.0.40-cp313-cp313-macosx_11_0_arm64.whl  sqlmodel-0.0.24-py3-none-any.whl  textual-0.43.2-py3-none-any.whl  typing_inspection-0.4.0-py3-none-any.whl  xdg-6.0.0-py3-none-any.whl
bourbon/: bourbon.tcss  main.py
bourbon/models/: types.py
bourbon/widgets/: computer_deets.py  mac.py
src/bourbon/: bourbon.tcss  main.py
src/bourbon/models/: types.py
src/bourbon/widgets/: computer_deets.py  styled_progress_bar.py  styled_tree.py
