[project]
name = "bourbon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "importlib-metadata>=8.6.1",
    "msgpack>=1.1.0",
    "pydantic>=2.11.3",
    "rich>=14.0.0",
    "ruff>=0.11.6",
    "sqlmodel>=0.0.24",
    "textual>=3.1.0",
    "tomli>=2.2.1",
    "uvloop>=0.21.0",
    "xdg>=6.0.0",
]

