[project]
name = "bourbon"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Adam Kaewell", email = "adam@kaewell.com"},
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual>=3.0.1,<4.0.0",
    "sqlmodel >=0.0.24,<1.0.0",
    "asyncio >=3.4.3,<4.0.0",
    "deepdiff >=8.4.2,<9.0.0",
    "rich >=14.0.0,<15.0.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "textual-dev >=1.7.0,<2.0.0",
]

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"

